--- a/17-DivaScriptCode.tex
+++ b/17-DivaScriptCode.tex
@@ -188,8 +188,7 @@ Outputs:\\
 \end{description}
 
 \paragraph{Remark:} grid definition for users is based on an origin which is the first grid point. 
-In the code, \texttt{xori} and \texttt{yori} are defined by $x_i=$ \texttt{xori} $+i \Delta x$.
-(and is thus shifted one grid space to the left compared to the user origin). Input file \file{fort.13} is modified from the \file{param.par} grid information by \texttt{griddef.a} accordingly, while \file{GridInfo.dat} contains the user grid as defined in \file{param.par}.
+In the code, \texttt{xori} and \texttt{yori} are defined by $x_i=$ \texttt{xori} $+i \Delta x$ (and is thus shifted one grid space to the left compared to the user origin). Input file \file{fort.13} is modified from the \file{param.par} grid information by \texttt{griddef.a} accordingly, while \file{GridInfo.dat} contains the user grid as defined in \file{param.par}.
 
 % -----------------------------------------------------------------------------------
 
