added entries in index

--- a/10-DivaPreprocessing.tex
+++ b/10-DivaPreprocessing.tex
@@ -348,7 +348,7 @@ The script \command{divafit}: uses the data (\file{./input/data.dat}) for a dire
 When dealing with very large datasets, using \command{divafit} with sub-sampling may save you a large amount of time.
 \etips
 
-\textbf{Note:} when using advection constraint and variable $L$, \command{divafit} will not provide a very meaningful value.
+\textbf{Note:} when using advection \index{Advection} constraint and variable $L$, \command{divafit} will not provide a very meaningful value.
 
 \subsubsection{Output files}
 %---------------------------
