--- a/13-DivaExamples.tex
+++ b/13-DivaExamples.tex
@@ -511,7 +511,7 @@ which gives us a  $809\, \times\, 299$ point grid. Results are presented on Figs
 
 
 \index{Advection}
-In this example, data points are located on a regular grid with alternate values of $-1$ and $+1$. An analysis with isotropic OI yields the field shown in Fig.~\ref{fig:medregiso}: we obtain a pattern of alternating circular isolines on the whole domain (land is treated as it was sea). The analysis with \diva shows the influence of coastlines, as differences between the two cases are more obvious near coasts (Fig \ref{fig:medregtopo}).  
+In this example, data points are located on a regular grid with alternate values of $-1$ and $+1$. An analysis with isotropic OI \index{OI} yields the field shown in Fig.~\ref{fig:medregiso}: we obtain a pattern of alternating circular isolines on the whole domain (land is treated as it was sea). The analysis with \diva shows the influence of coastlines, as differences between the two cases are more obvious near coasts (Fig.~\ref{fig:medregtopo}).  
 
 \begin{figure}[H]
 \centering
@@ -532,7 +532,7 @@ In this example, data points are located on a regular grid with alternate values
 }
 \end{figure}
 
-An illustration of the advection constraint is also presented: the velocity field is shown in Fig.~\ref{fig:medsea_vel} and the analysis produces the field of Fig. \ref{fig:medsea_adv}.
+An illustration of the advection constraint \index{Advection} is also presented: the velocity field is shown in Fig.~\ref{fig:medsea_vel} and the analysis produces the field of Fig.~\ref{fig:medsea_adv}.
 
 \begin{figure}[H]
 \centering
