--- a/15-Godiva.tex
+++ b/15-Godiva.tex
@@ -93,7 +93,7 @@ The main shell script file for climatologies performance is \command{divadoall}.
 \begin{itemize}
 \item Depths data sets extraction.
 \item Boundary lines and coastlines generation (contour files).
-\item ``Advection'' field (based on coast lines) generation.
+\item Advection field (based on coast lines) generation.
 \item Data cleaning on mesh.
 \item Outliers elimination from data sets.
 \item Generation of Relative Length fields.
